--- a/DeviceSettings/res/values/config.xml
+++ b/DeviceSettings/res/values/config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2021 crDroid Android Project
+     Copyright (C) 2018 crDroid Android Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -17,11 +17,11 @@
 <resources>
 
     <!-- The default usage of slider -->
-    <string name="config_defaultNotificationSliderUsage" translatable="false">6</string>
+    <string name="config_defaultNotificationSliderUsage" translatable="false">1</string>
 
     <!-- The default actions of slider when use for notification -->
     <string-array name="config_defaultSliderActionsForNotification" translatable="false">
-        <item>10</item>
+        <item>11</item>
         <item>12</item>
         <item>13</item>
     </string-array>
@@ -54,10 +54,4 @@
         <item>50</item>
     </string-array>
 
-    <!-- The default actions of slider when use for notification and ringer -->
-    <string-array name="config_defaultSliderActionsForNotificationRinger" translatable="false">
-        <item>65</item>
-        <item>64</item>
-        <item>63</item>
-    </string-array>
 </resources>
