--- a/DeviceSettings/res/values/dimens.xml
+++ b/DeviceSettings/res/values/dimens.xml
@@ -15,8 +15,6 @@
      limitations under the License.
 -->
 <resources>
-    <!-- Palette colors referenced by top-level themes. -->
-    <color name="theme_primary">@*android:color/primary_device_default_dark</color>
-    <color name="theme_primary_dark">@*android:color/primary_dark_device_default_dark</color>
-    <color name="theme_accent">@*android:color/accent_device_default_light</color>
+    <!-- ActionBar contentInsetStart -->
+    <dimen name="actionbar_subsettings_contentInsetStart">72dp</dimen>
 </resources>
