--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -64,11 +64,14 @@
 
     <!-- Whether device has screen with higher aspect ratio -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
-    
+
+    <!-- FOD fingerprint scanner -->
+    <bool name="config_needCustomFODView">true</bool>
     <!-- Defines the actions shown in advanced reboot submenu -->
     <string-array name="config_restartActionsList">
         <item>restart</item>
         <item>restart_recovery</item>
+     </string-array>
         <item>restart_bootloader</item>
         <item>restart_fastboot</item>
      </string-array>
